feat: backend - login system/ frontend - intergrate with backend

--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -1076,6 +1076,7 @@ table {
 }
 .header-area .header-meta .search-form {
   z-index: 100;
+  margin-right: 10px;
 }
 .header-area .header-meta .search-form .form-control {
   width: 120px;
@@ -1103,10 +1104,10 @@ table {
   z-index: 10;
 }
 .header-area .header-meta .user-dropdown .user-btn {
-  padding: 0;
-  font-size: 1.25rem;
+  padding: 5;
+  font-size: 1.1rem;
   color: #1f0757;
-  width: 40px;
+  width: auto;
   height: 40px;
   display: inline-block;
   border-radius: 0.5rem;
@@ -1128,12 +1129,13 @@ table {
   padding: 1rem 0;
   -webkit-transition: all 350ms ease-in;
   transition: all 350ms ease-in;
-  width: 11rem;
+  width: auto;
   background-color: #ffffff;
   border: 2px solid #c2d4f8;
   -webkit-box-shadow: 0 1rem 3rem rgba(15, 30, 150, 0.175);
           box-shadow: 0 1rem 3rem rgba(15, 30, 150, 0.175);
   border-radius: 0.5rem;
+  white-space: nowrap;
 }
 .header-area .header-meta .user-dropdown .dropdown-menu .dropdown-item {
   white-space: normal;
