--- a/frontend/public/assets/scss/_dark.scss
+++ b/frontend/public/assets/scss/_dark.scss
@@ -26,7 +26,8 @@
     border-color: rgba(194, 212, 248, 0.1);
     background-color: $dark-sec;
   }
-
+  .current-price {
+    color: #cd5b45;}
   .border,
   .border-start,
   .border-end,
